added more scripts and funtions

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,18 @@
         </font>
     </head>
     <body>
+        <br><br>
         <h1>PiBackup by @richonguzman</h1>
+        <br><br>
         <a href=pibackup ><button class=grey style="height:70px;width:300px;font-size: 48px">PiBackup</button></a>
         <br><br>
+        <a href=pitimelapse ><button class=grey style="height:70px;width:360px;font-size: 48px">PiTimelapse</button></a>
+        <br><br>
+        <a href=piclone ><button class=grey style="height:70px;width:280px;font-size: 48px">PiClone</button></a>
+        <br><br>
+        <a href=piclean ><button class=grey style="height:70px;width:280px;font-size: 48px">PiClean</button></a>
+        <br><br>
+        <a href=piduplicated ><button class=grey style="height:70px;width:380px;font-size: 48px">PiDuplicated</button></a>
         <br><br>
         <br><br>
         <form method="post" action="/">
