Update buttons width

--- a/templates/pibackup.html
+++ b/templates/pibackup.html
@@ -32,9 +32,9 @@
         <br><br>
         <input type="submit" style="height:70px;width:480px;font-size:48px" value="JPG+RAW+Video" name="PBK_JRV"/>
         <br><br>
-        <button type="button" style="height:70px;width:330px;font-size:48px" onclick="checkDisks()">Check Disks</button>
+        <button type="submit" style="height:70px;width:480px;font-size:48px" onclick="checkDisks()">Check Disks</button>
         <br><br>
-        <button type="button" style="height:70px;width:330px;font-size:48px" onclick="listFilesToCopy()">List Files to Copy</button>
+        <button type="submit" style="height:70px;width:580px;font-size:48px" onclick="listFilesToCopy()">List Files to Copy</button>
     </form>
     <br><br>
     <pre id="backup-output" style="white-space: pre-wrap;"></pre>
