--- a/static/style.css
+++ b/static/style.css
@@ -15,3 +15,26 @@ body {
   border-left: 1px solid #FDFEFE;
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid #ECF0F1;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #3498DB;
+  color: white;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #ddd;
+}
