Some fixes and new buttons

--- a/templates/pibackup.html
+++ b/templates/pibackup.html
@@ -56,6 +56,12 @@
     <button type="button" style="height:70px;width:320px;font-size:48px" onclick="clearOutput()">Clear Logs</button>
     
     <br><br>
+    <button type="button" style="height:70px;width:480px;font-size:48px" onclick="showLatestReport()">Show Latest Report</button>
+
+    <br><br>
+    <button type="button" style="height:70px;width:480px;font-size:48px" onclick="ejectDisks()">Eject Disks</button>
+    
+    <br><br>
     <pre id="backup-output" style="white-space: pre-wrap;"></pre>
 
     <script type="text/javascript">
