--- a/templates/pibackup.html
+++ b/templates/pibackup.html
@@ -47,13 +47,13 @@
     <button type="button" style="height:70px;width:480px;font-size:48px" onclick="startBackup()">Start Backup</button>
 
     <br><br>
-    <button type="button" style="height:70px;width:220px;font-size:48px" onclick="clearOutput()">Clear</button>
-
-    <br><br>
-    <button type="button" style="height:70px;width:480px;font-size:48px" onclick="showLatestReport()">Show Latest Report</button>
+    <button type="button" style="height:70px;width:580px;font-size:48px" onclick="showLatestReport()">Show Latest Report</button>
 
     <br><br>
     <button type="button" style="height:70px;width:480px;font-size:48px" onclick="ejectDisks()">Eject Disks</button>
+
+    <br><br>
+    <button type="button" style="height:70px;width:320px;font-size:48px" onclick="clearOutput()">Clear Logs</button>
     
     <br><br>
     <pre id="backup-output" style="white-space: pre-wrap;"></pre>
